[package]
name = "pokeradar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.5"
getrandom = "0.2.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.2.3", features = ['js'] }
wasm-bindgen = "0.2.78"
